[gd_scene load_steps=26 format=2]

[ext_resource path="res://Fonts/Roboto-BlackItalic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Menu/Level.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Menu/drain rate.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Menu/input.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Menu/Cost.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Menu/output.png" type="Texture" id=9]
[ext_resource path="res://Sprites/resources/coal.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Menu/Time.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Menu/Crit.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Menu/Info.png" type="Texture" id=13]
[ext_resource path="res://Fonts/Roboto-MediumItalic.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Prefabs/FuelBar.tscn" type="PackedScene" id=15]
[ext_resource path="res://Prefabs/tooltip/Tooltip Info.gd" type="Script" id=16]
[ext_resource path="res://Sprites/Menu/Fuel Full.png" type="Texture" id=17]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.03 )
border_color = Color( 1, 1, 1, 0.65 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.0509804 )
border_color = Color( 1, 1, 1, 0.65 )
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.25 )
draw_center = false

[sub_resource type="DynamicFont" id=3]
size = 17
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 12
font_data = ExtResource( 14 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 0.03 )
border_color = Color( 1, 1, 1, 0.65 )
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false

[sub_resource type="DynamicFont" id=5]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 14
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="LORED Tooltip Info" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2
script = ExtResource( 16 )

[node name="bg" type="Panel" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 274.0
margin_bottom = 219.0
custom_styles/panel = SubResource( 1 )

[node name="m" type="MarginContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 274.0
margin_bottom = 219.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="v" type="VBoxContainer" parent="m"]
margin_left = 10.0
margin_top = 10.0
margin_right = 262.0
margin_bottom = 207.0
custom_constants/separation = 10

[node name="v" type="VBoxContainer" parent="m/v"]
margin_right = 252.0
margin_bottom = 80.0
custom_constants/separation = 20

[node name="top" type="MarginContainer" parent="m/v/v"]
margin_right = 252.0
margin_bottom = 36.0

[node name="bg" type="Panel" parent="m/v/v/top"]
margin_right = 252.0
margin_bottom = 36.0
custom_styles/panel = SubResource( 2 )

[node name="v" type="VBoxContainer" parent="m/v/v/top"]
margin_right = 252.0
margin_bottom = 36.0
custom_constants/separation = 0

[node name="h" type="HBoxContainer" parent="m/v/v/top/v"]
margin_right = 252.0
margin_bottom = 36.0
alignment = 1

[node name="Panel" type="Panel" parent="m/v/v/top/v/h"]
margin_left = 58.0
margin_right = 94.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
size_flags_vertical = 4
custom_styles/panel = SubResource( 7 )

[node name="loredIcon" type="Sprite" parent="m/v/v/top/v/h/Panel"]
unique_name_in_owner = true
position = Vector2( 18, 18 )
texture = ExtResource( 10 )

[node name="shadow" type="Sprite" parent="m/v/v/top/v/h/Panel/loredIcon"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 1, 1 )
texture = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="m/v/v/top/v/h"]
margin_left = 98.0
margin_right = 193.0
margin_bottom = 36.0
alignment = 1

[node name="loredName" type="Label" parent="m/v/v/top/v/h/VBoxContainer"]
unique_name_in_owner = true
margin_top = 7.0
margin_right = 95.0
margin_bottom = 28.0
size_flags_horizontal = 0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Carcinogens"
valign = 1

[node name="flair" type="Label" parent="m/v/v/top/v/h/VBoxContainer"]
visible = false
margin_top = 25.0
margin_right = 70.0
margin_bottom = 40.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Stone LORED"

[node name="cost" type="MarginContainer" parent="m/v/v"]
margin_top = 56.0
margin_right = 252.0
margin_bottom = 80.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="bg" type="Panel" parent="m/v/v/cost"]
margin_right = 252.0
margin_bottom = 24.0
custom_styles/panel = SubResource( 8 )

[node name="h" type="HBoxContainer" parent="m/v/v/cost"]
margin_right = 252.0
margin_bottom = 24.0
custom_constants/separation = 20
alignment = 1

[node name="level" type="HBoxContainer" parent="m/v/v/cost/h"]
margin_left = 78.0
margin_right = 144.0
margin_bottom = 24.0
custom_constants/separation = 8
alignment = 1

[node name="icon" type="Panel" parent="m/v/v/cost/h/level"]
margin_top = 12.0
margin_right = 18.0
margin_bottom = 12.0
rect_min_size = Vector2( 18, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="m/v/v/cost/h/level/icon"]
position = Vector2( 9, 0 )
texture = ExtResource( 4 )

[node name="shadow" type="Sprite" parent="m/v/v/cost/h/level/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="h" type="HBoxContainer" parent="m/v/v/cost/h/level"]
margin_left = 26.0
margin_right = 66.0
margin_bottom = 24.0
alignment = 1

[node name="text" type="Label" parent="m/v/v/cost/h/level/h"]
margin_top = 4.0
margin_right = 28.0
margin_bottom = 19.0
size_flags_horizontal = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Level"
valign = 1

[node name="loredLevel" type="Label" parent="m/v/v/cost/h/level/h"]
unique_name_in_owner = true
margin_left = 32.0
margin_top = 3.0
margin_right = 40.0
margin_bottom = 20.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "4"
align = 1
valign = 1

[node name="Fuel Progress" parent="m/v/v/cost/h" instance=ExtResource( 15 )]
unique_name_in_owner = true
margin_left = 164.0
margin_right = 174.0

[node name="bot" type="MarginContainer" parent="m/v"]
unique_name_in_owner = true
margin_top = 90.0
margin_right = 252.0
margin_bottom = 197.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = -10

[node name="Simple" type="GridContainer" parent="m/v/bot"]
unique_name_in_owner = true
margin_right = 252.0
margin_bottom = 117.0
custom_constants/vseparation = -9
custom_constants/hseparation = 20
columns = 2

[node name="Output" type="HBoxContainer" parent="m/v/bot/Simple"]
margin_right = 96.0
margin_bottom = 36.0
custom_constants/separation = 8

[node name="icon" type="Panel" parent="m/v/bot/Simple/Output"]
margin_right = 18.0
margin_bottom = 36.0
rect_min_size = Vector2( 18, 36 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="m/v/bot/Simple/Output/icon"]
position = Vector2( 9, 18 )
texture = ExtResource( 9 )

[node name="shadow" type="Sprite" parent="m/v/bot/Simple/Output/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="text" type="Label" parent="m/v/bot/Simple/Output"]
margin_left = 26.0
margin_top = 10.0
margin_right = 66.0
margin_bottom = 25.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 5 )
text = "Output:"
valign = 1

[node name="loredOutputSimple" type="Label" parent="m/v/bot/Simple/Output"]
unique_name_in_owner = true
margin_left = 74.0
margin_top = 9.0
margin_right = 82.0
margin_bottom = 26.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "1"
align = 1
valign = 1

[node name="Input" type="HBoxContainer" parent="m/v/bot/Simple"]
margin_left = 116.0
margin_right = 252.0
margin_bottom = 36.0
custom_constants/separation = 8

[node name="icon" type="Panel" parent="m/v/bot/Simple/Input"]
margin_right = 18.0
margin_bottom = 36.0
rect_min_size = Vector2( 18, 36 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="m/v/bot/Simple/Input/icon"]
position = Vector2( 9, 18 )
texture = ExtResource( 7 )

[node name="shadow" type="Sprite" parent="m/v/bot/Simple/Input/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="text" type="Label" parent="m/v/bot/Simple/Input"]
margin_left = 26.0
margin_top = 10.0
margin_right = 57.0
margin_bottom = 25.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 5 )
text = "Input:"
valign = 1

[node name="loredInputSimple" type="Label" parent="m/v/bot/Simple/Input"]
unique_name_in_owner = true
margin_left = 65.0
margin_top = 9.0
margin_right = 80.0
margin_bottom = 26.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "8x"
align = 1
valign = 1

[node name="Haste" type="HBoxContainer" parent="m/v/bot/Simple"]
margin_top = 27.0
margin_right = 96.0
margin_bottom = 63.0
custom_constants/separation = 8

[node name="icon" type="Panel" parent="m/v/bot/Simple/Haste"]
margin_right = 18.0
margin_bottom = 36.0
rect_min_size = Vector2( 18, 36 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="m/v/bot/Simple/Haste/icon"]
position = Vector2( 9, 18 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="shadow" type="Sprite" parent="m/v/bot/Simple/Haste/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 11 )

[node name="text" type="Label" parent="m/v/bot/Simple/Haste"]
margin_left = 26.0
margin_top = 10.0
margin_right = 61.0
margin_bottom = 25.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 5 )
text = "Haste:"
valign = 1

[node name="loredHasteSimple" type="Label" parent="m/v/bot/Simple/Haste"]
unique_name_in_owner = true
margin_left = 69.0
margin_top = 9.0
margin_right = 92.0
margin_bottom = 26.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "40x"
align = 1
valign = 1

[node name="Crit" type="HBoxContainer" parent="m/v/bot/Simple"]
margin_left = 116.0
margin_top = 27.0
margin_right = 252.0
margin_bottom = 63.0
custom_constants/separation = 8

[node name="icon" type="Panel" parent="m/v/bot/Simple/Crit"]
margin_right = 18.0
margin_bottom = 36.0
rect_min_size = Vector2( 18, 36 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="m/v/bot/Simple/Crit/icon"]
position = Vector2( 9, 18 )
texture = ExtResource( 12 )

[node name="shadow" type="Sprite" parent="m/v/bot/Simple/Crit/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="text" type="Label" parent="m/v/bot/Simple/Crit"]
margin_left = 26.0
margin_top = 10.0
margin_right = 92.0
margin_bottom = 25.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 5 )
text = "Crit Chance:"
valign = 1

[node name="loredCritSimple" type="Label" parent="m/v/bot/Simple/Crit"]
unique_name_in_owner = true
margin_left = 100.0
margin_top = 9.0
margin_right = 126.0
margin_bottom = 26.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "30%"
align = 1
valign = 1

[node name="FuelCost" type="HBoxContainer" parent="m/v/bot/Simple"]
margin_top = 54.0
margin_right = 96.0
margin_bottom = 90.0
custom_constants/separation = 8

[node name="icon" type="Panel" parent="m/v/bot/Simple/FuelCost"]
margin_right = 18.0
margin_bottom = 36.0
rect_min_size = Vector2( 18, 36 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="m/v/bot/Simple/FuelCost/icon"]
position = Vector2( 9, 18 )
texture = ExtResource( 6 )

[node name="shadow" type="Sprite" parent="m/v/bot/Simple/FuelCost/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="text" type="Label" parent="m/v/bot/Simple/FuelCost"]
margin_left = 26.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 25.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 5 )
text = "Fuel Cost:"
valign = 1

[node name="loredFuelCostSimple" type="Label" parent="m/v/bot/Simple/FuelCost"]
unique_name_in_owner = true
margin_left = 88.0
margin_top = 9.0
margin_right = 96.0
margin_bottom = 26.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "1"
align = 1
valign = 1

[node name="FuelStorage" type="HBoxContainer" parent="m/v/bot/Simple"]
margin_left = 116.0
margin_top = 54.0
margin_right = 252.0
margin_bottom = 90.0
custom_constants/separation = 8

[node name="icon" type="Panel" parent="m/v/bot/Simple/FuelStorage"]
margin_right = 18.0
margin_bottom = 36.0
rect_min_size = Vector2( 18, 36 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="m/v/bot/Simple/FuelStorage/icon"]
position = Vector2( 9, 18 )
texture = ExtResource( 17 )

[node name="shadow" type="Sprite" parent="m/v/bot/Simple/FuelStorage/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 17 )

[node name="text" type="Label" parent="m/v/bot/Simple/FuelStorage"]
margin_left = 26.0
margin_top = 10.0
margin_right = 97.0
margin_bottom = 25.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 5 )
text = "Fuel Storage:"
valign = 1

[node name="loredFuelStorageSimple" type="Label" parent="m/v/bot/Simple/FuelStorage"]
unique_name_in_owner = true
margin_left = 105.0
margin_top = 9.0
margin_right = 113.0
margin_bottom = 26.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "1"
align = 1
valign = 1

[node name="Cost" type="HBoxContainer" parent="m/v/bot/Simple"]
margin_top = 81.0
margin_right = 96.0
margin_bottom = 117.0
custom_constants/separation = 8

[node name="icon" type="Panel" parent="m/v/bot/Simple/Cost"]
margin_right = 18.0
margin_bottom = 36.0
rect_min_size = Vector2( 18, 36 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="m/v/bot/Simple/Cost/icon"]
position = Vector2( 9, 18 )
texture = ExtResource( 8 )

[node name="shadow" type="Sprite" parent="m/v/bot/Simple/Cost/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="text" type="Label" parent="m/v/bot/Simple/Cost"]
margin_left = 26.0
margin_top = 10.0
margin_right = 54.0
margin_bottom = 25.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 5 )
text = "Cost:"
valign = 1

[node name="loredCostModifierSimple" type="Label" parent="m/v/bot/Simple/Cost"]
unique_name_in_owner = true
margin_left = 62.0
margin_top = 9.0
margin_right = 70.0
margin_bottom = 26.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "1"
align = 1
valign = 1

[node name="misc" type="HBoxContainer" parent="m/v/bot/Simple"]
margin_left = 116.0
margin_top = 81.0
margin_right = 252.0
margin_bottom = 117.0
custom_constants/separation = 8

[node name="icon" type="Panel" parent="m/v/bot/Simple/misc"]
margin_right = 18.0
margin_bottom = 36.0
rect_min_size = Vector2( 18, 36 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="m/v/bot/Simple/misc/icon"]
position = Vector2( 9, 18 )
texture = ExtResource( 13 )

[node name="shadow" type="Sprite" parent="m/v/bot/Simple/misc/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 13 )

[node name="type" type="HBoxContainer" parent="m/v/bot/Simple/misc"]
margin_left = 26.0
margin_right = 136.0
margin_bottom = 36.0

[node name="text" type="Label" parent="m/v/bot/Simple/misc/type"]
margin_top = 10.0
margin_right = 78.0
margin_bottom = 25.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 5 )
text = "Fuel Resource:"
valign = 1

[node name="loredFuelResourceSimple" type="Label" parent="m/v/bot/Simple/misc/type"]
unique_name_in_owner = true
margin_left = 82.0
margin_top = 9.0
margin_right = 110.0
margin_bottom = 26.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Coal"
align = 1
valign = 1
